attempt to fix the form

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <label for="other"><small>Other Contact:</small></label><br>
             <input type="text" id="other" name="other"><br>
             <label for="textarea"><small>Message:</small></label><br>
-            <textarea rows="7" id="msg" name="message" style="width: 250px; resize: both;"></textarea>
+            <textarea id="message" name="message" placeholder="Enter your message here..." style="width: 250px; resize: both;" rows="7"></textarea>
             <div style="display:none;">
                 <label for="website">Website:</label>
                 <input type="text" id="website" name="website" autocomplete="off">
