--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <p onclick="window.location.href='https://behance.net/silaswolfe';"><small>Behance..</small></p>
         <p onclick="window.location.href='https://instagram.com/sivcal';"><small>Instagram..</small></p>
     </div>
-    <div class="indented" style="padding-bottom: 80px;">
+    <div class="indented" style="padding-bottom: 20px;">
         <p style="max-width: 500px;">If you have any employment opportunities, commission requests, or questions please let me know!</p>
         <form
               action="https://formspree.io/f/xrbplvkn"
@@ -52,7 +52,7 @@
     <div class="indented">
         <p>View and download my resumee here:</p>
     </div>
-    <div class="flexcont"> 
+    <div class="flexcont" style="padding-bottom: 80px;"> 
         <div class="indented; flexcolfullwid">
             <object title="ueno brochure" data="img/resumee.pdf" style="width: 80vw; height: 100vh;">
                 <a href="img/br-upzmap.pdf">
