add gallery to index pg

--- a/index.html
+++ b/index.html
@@ -28,7 +28,40 @@
         </div>
     </div>
     <div>
-        Put more exciting content here!!!!!!
+        <div class="indented" onclick="window.location.href='gallery-branding.html'">
+            <div class="flexcont">
+                <div class="flexcoll">
+                    <div class="flexbod">
+                        <img src="svg/pv-tika.svg" alt="tika" onclick="window.location.href='spg-br-tika.html'">
+                    </div>
+                </div>
+                <div class="flexcol">
+                    <div class="flexbod">
+                        <img src="svg/pv-Bwb.svg" alt="Broadway Bomb" onclick="window.location.href='spg-br-broadwaybomb.html'">
+                    </div>
+                    <div class="flexbod">
+                        <img src="svg/pv-norsk.svg" alt="Norsk Fisker" href="spg-br-norskfisker.html">
+                    </div>
+                </div>
+                <div class="flexcolr">
+                    <div class="flexbod">
+                        <img src="svg/pv-upz.svg" alt="Ueno Park Zoo" onclick="window.location.href='spg-br-uenozoo.html'">
+                    </div>
+                </div>
+            </div>
+        </div>
+    <footer>
+        <div class="container">
+            <div class="column">
+                <small style="color:darkslategrey">© Silas Wolfe 2025 -- all rights reserved</small>
+            </div>
+            <div class="column">
+                <small onclick="window.location.href='about.html'" style="color:rgb(198, 111, 5)">about</small>
+                <br>
+                <small onclick="window.location.href='contact.html'" style="color:rgb(198,111,5)">contact</small>
+            </div>
+        </div>
+    
     </div>
     <div class="hscrolcont" style="padding: 10px; width: 100vw;">
         <div class="hscrolitem">
