--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -19,7 +19,7 @@
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
     <div class="indented">
-        <h1>Page heading</h1>
+        <h1>Brand Identity Projects</h1>
     </div>
 </head>
 <body>
