--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <label for="other"><small>Other Contact:</small></label><br>
             <input type="text" id="other" name="other"><br>
             <label for="textarea"><small>Message:</small></label><br>
-            <textarea id="message" name="message" placeholder="Enter your message here..." style="width: 250px; resize: both;" rows="7"></textarea>
+            <textarea><input type="text" id="message" name="message" placeholder="Enter your message here..." style="width: 250px; resize: both;" rows="7"></textarea>
             <div style="display:none;">
                 <label for="website">Website:</label>
                 <input type="text" id="website" name="website" autocomplete="off">
@@ -54,8 +54,8 @@
     </div>
     <div class="flexcont" style="padding-bottom: 80px;"> 
         <div class="indented; flexcolfullwid">
-            <object title="ueno brochure" data="img/resumee.pdf" style="width: 80vw; height: 100vh;">
-                <a href="img/br-upzmap.pdf">
+            <object title="current resumee" data="img/resumee.pdf" style="width: 80vw; height: 100vh;">
+                <a href="img/Silas-WOLFE-Resumee-10-8-25.pdf">
                     Silas Wolfe Resumee PDF
                 </a>
             </object>
