Updating Font Gallery (1)

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     </div>
     <div class="flexcont" style="padding-bottom: 80px;"> 
         <div class="indented; flexcolfullwid">
-            <object title="current resumee" data="img/resumee.pdf" style="width: 80vw; height: 100vh;">
+            <object title="current resumee" data="img/Silas-WOLFE-Resumee-10-8-25.pdf" style="width: 80vw; height: 100vh;">
                 <a href="img/Silas-WOLFE-Resumee-10-8-25.pdf">
                     Silas Wolfe Resumee PDF
                 </a>
