--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -29,30 +29,31 @@
     <div class="indented" style="padding-bottom: 40pt;">
         <div>
             <h2>Ueno Sans</h2>
+            <button class="nolinebutton" style="align-self: flex-end;"><small>Font not finished</small></button>
         </div>
         <div>
             <img src="svg/pv-UenoSans.svg" style="width: 900px;">
         </div>
         <div>
-            <button class="nolinebutton"><small>Font not finished</small></button>
-        </div>
-        <div>
             <h2>Publicos</h2>
+            <button class="nolinebutton" style="align-self: flex-end;"><small>Download</small></button>
         </div>
         <div>
             <img src="svg/pv-Publicos.svg" style="width: 900px;">
         </div>
         <div>
-            <button class="nolinebutton"><small>Font not finished</small></button>
-        </div>
-        <div>
             <h2>Velocita</h2>
+            <button class="nolinebutton" style="align-self: flex-end;"><small>Download</small></button>
         </div>
         <div>
             <img src="svg/pv-Velocita.svg" style="width: 900px;">
         </div>
         <div>
-            <button class="nolinebutton"><small>Download Unavailable</small></button>
+            <h2>Yams</h2>
+            <button class="nolinebutton" style="align-self: flex-end;""><small>Download</small></button>
+        </div>
+        <div>
+            <img src="svg/pv-Yams.svg" style="width: 900px;">
         </div>
     </div>
 <footer>
