--- a/options-d.html
+++ b/options-d.html
@@ -27,7 +27,7 @@
         <div style="height: 50vh;">
         <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-branding.html'">Branding..</p>
         <!--<p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-print.html'">Print Design..</p>-->
-        <!--<p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-fonts.html'">Typefaces..</p>-->
+        <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-fonts.html'">Typefaces..</p>
         <!--<p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-illustration.html'">Illustrative Work..</p>-->
         </div>
     </div>
