Test Dl Button Placement (Fonts Gallery)

--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -29,7 +29,7 @@
     <div class="indented" style="padding-bottom: 40pt;">
         <div>
             <h2>Ueno Sans</h2>
-            <button class="nolinebutton" style="align-self: flex-end;"><small>Font not finished</small></button>
+            <button class="nolinebutton" style="align: right,"><small>Font not finished</small></button>
         </div>
         <div>
             <img src="svg/pv-UenoSans.svg" style="width: 900px;">
