Testing Dl button placement 2 (font gallery)

--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -28,8 +28,7 @@
     </div>
     <div class="indented" style="padding-bottom: 40pt;">
         <div>
-            <h2>Ueno Sans</h2>
-            <button class="nolinebutton" style="align: right,"><small>Font not finished</small></button>
+            <h2>Ueno Sans</h2> <button class="nolinebutton"><small>Font not finished</small></button>
         </div>
         <div>
             <img src="svg/pv-UenoSans.svg" style="width: 900px;">
