Fixing Issues with Fonts Page
Added Download function to buttons on font gallery page

Uploaded fonts (yams, publicos)

Removed Double Footer on index

New css style for download buttons (needs text underline removed)

Moved illustration gallery away from site tree

--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -27,32 +27,37 @@
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
     <div class="indented" style="padding-bottom: 40pt;">
+        <!--UENO SANS-->
         <div>
-            <h2>Ueno Sans</h2> <button class="nolinebutton"><small>Font not finished</small></button>
+            <h2>Ueno Sans</h2>
+            <a href="downloads/UenoSans-otf-ttf.zip" download class="nolinebuttondl"><small>Font not finished</small></a>
         </div>
         <div>
-            <img src="svg/pv-UenoSans.svg" style="width: 900px;">
+            <img alt="ueno sans preview" src="svg/pv-UenoSans.svg" style="width: 900px;">
         </div>
+        <!--PUBLICOS-->
         <div>
             <h2>Publicos</h2>
-            <button class="nolinebutton" style="align-self: flex-end;"><small>Download</small></button>
+            <a href="downloads/Publicos-otf-ttf.zip" download class="nolinebuttondl"><small>Download</small></a>
         </div>
         <div>
-            <img src="svg/pv-Publicos.svg" style="width: 900px;">
+            <img alt="publicos preview" src="svg/pv-Publicos.svg" style="width: 900px;">
         </div>
+        <!--Velocita-->
         <div>
             <h2>Velocita</h2>
-            <button class="nolinebutton" style="align-self: flex-end;"><small>Download</small></button>
+            <a href="downloads/Velocita-v2-otf-ttf.zip" download class="nolinebuttondl"><small>Download</small></a>
         </div>
         <div>
-            <img src="svg/pv-Velocita.svg" style="width: 900px;">
+            <img alt="velocita preview" src="svg/pv-Velocita.svg" style="width: 900px;">
         </div>
+        <!--Yams-->
         <div>
             <h2>Yams</h2>
-            <button class="nolinebutton" style="align-self: flex-end;""><small>Download</small></button>
+            <a href="downloads/Yams-otf-ttf.zip" download class="nolinebuttondl"><small>Download</small></a>
         </div>
         <div>
-            <img src="svg/pv-Yams.svg" style="width: 900px;">
+            <img alt="yams preveiw" src="svg/pv-Yams.svg" style="width: 900px;">
         </div>
     </div>
 <footer>
