--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
         </div>
+    </div>
     <footer>
         <div class="container">
             <div class="column">
@@ -61,8 +62,8 @@
                 <small onclick="window.location.href='contact.html'" style="color:rgb(198,111,5)">contact</small>
             </div>
         </div>
-    
-    </div>
+    </footer>
+    <!--<div>
     <div class="hscrolcont" style="padding: 10px; width: 100vw;">
         <div class="hscrolitem">
             <img src="img/fa-rick.jpg" alt="Image 1">
@@ -75,17 +76,17 @@
             <img src="img/fa-youngboy.jpg" alt="Image 8">
         </div>
     </div>
-<footer>
-    <div class="container">
-        <div class="column">
-            <small style="color:darkslategrey">© Silas Wolfe 2025 -- all rights reserved</small>
+    <footer>
+        <div class="container">
+            <div class="column">
+                <small style="color:darkslategrey">© Silas Wolfe 2025 -- all rights reserved</small>
+            </div>
+            <div class="column">
+                <small onclick="window.location.href='about.html'" style="color:rgb(198, 111, 5)">about</small>
+                <br>
+                <small onclick="window.location.href='contact.html'" style="color:rgb(198,111,5)">contact</small>
+            </div>
         </div>
-        <div class="column">
-            <small onclick="window.location.href='about.html'" style="color:rgb(198, 111, 5)">about</small>
-            <br>
-            <small onclick="window.location.href='contact.html'" style="color:rgb(198,111,5)">contact</small>
-        </div>
-    </div>
-</footer>
+    </footer>-->
 </body>
 </html>
