--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -46,7 +46,7 @@
         <!--Velocita-->
         <div>
             <h2>Velocita</h2>
-            <a href="downloads/Velocita-v2-otf-ttf.zip" download class="nolinebuttondl"><small>Download</small></a>
+            <a href="downloads/Velocita-ttf.zip" download class="nolinebuttondl"><small>Download</small></a>
         </div>
         <div>
             <img alt="velocita preview" src="svg/pv-Velocita.svg" style="width: 900px;">
