--- a/gallery-print.html
+++ b/gallery-print.html
@@ -24,41 +24,23 @@
 </head>
 <body>
     <div class="indented">
-        <p>Please bear with me as I am gathering images to represent my work.</p>
+        <p>Please follow each entry to the attached Behance pages.</p>
     </div>
     <div class="indented">
         <div class="flexcont">
             <div class="flexcoll">
                 <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
+                    <img src="img/pr-tennmag-thumbnail.jpg" onclick="window.location.href='https://www.behance.net/gallery/240087133/Redesigned-Magazine'">
                 </div>
             </div>
             <div class="flexcol">
                 <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
+                    <img src="img/pr-typebook-thumbnail.jpg" onclick="window.location.href='https://www.behance.net/gallery/236479253/Typeface-Design-Guide'">
                 </div>
             </div>
             <div class="flexcolr">
                 <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
+                    <img src="img/pr-bookproj-thumbnail.jpg" onclick="window.location.href='https://www.behance.net/gallery/204605001/2024-Print-Design-Overview'">
                 </div>
             </div>
         </div>
