--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -30,7 +30,7 @@
         <div class="flexcont">
             <div class="flexcoll">
                 <div class="flexbod">
-                    <img src="svg/pv-tika.svg" alt="tika" onclick="window.location.href='spg-br-tika.htmlhttps://www.behance.net/gallery/204979037/NY-School-meets-Tropical'">
+                    <img src="svg/pv-tika.svg" alt="tika" onclick="window.location.href='https://www.behance.net/gallery/204979037/NY-School-meets-Tropical'">
                 </div>
             </div>
             <div class="flexcol">
